add trigger controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "RedcapConfiguration": {
+    "ApiTokenInfo": {
+      "token": "145180AECB99689BBC0E941E704A71E0",
+      "baseUrl": "http://localhost:8080/redcap/api/"
+    }
   }
 }
