--- a/project.json
+++ b/project.json
@@ -14,7 +14,9 @@
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0"
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+    "Serilog.Extensions.Logging": "1.3.1",
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "tools": {
